--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/linhlv/microservice-seneca-js#readme",
   "dependencies": {
     "now": "^0.26.0",
-    "seneca": "^3.2.2"
+    "seneca": "^3.2.2",
+    "socket.io": "^1.5.1"
   }
 }
